RESOLVED FIXED155215
Element with maximum tabIndex cannot be returned by nextElementWithGreaterTabIndex()
https://bugs.webkit.org/show_bug.cgi?id=155215
Summary Element with maximum tabIndex cannot be returned by nextElementWithGreaterTab...
Chris Dumez
Reported 2016-03-08 20:41:38 PST
Element with maximum tabIndex cannot be returned by nextElementWithGreaterTabIndex() due to a bug in <http://trac.webkit.org/changeset/197726>.
Attachments
Patch (4.66 KB, patch)
2016-03-08 20:49 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-03-08 20:49:47 PST
WebKit Commit Bot
Comment 2 2016-03-08 22:27:43 PST
Comment on attachment 273384 [details] Patch Clearing flags on attachment: 273384 Committed r197835: <http://trac.webkit.org/changeset/197835>
WebKit Commit Bot
Comment 3 2016-03-08 22:27:47 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4 2016-03-08 23:09:22 PST
The new test always times out on iOS. Can it be rewritten to work in a cross-platform way?
Chris Dumez
Comment 5 2016-03-09 09:17:09 PST
(In reply to comment #4) > The new test always times out on iOS. Can it be rewritten to work in a > cross-platform way? In EventSenderProxyIOS.mm: void EventSenderProxy::keyDown(WKStringRef key, WKEventModifiers modifiers, unsigned keyLocation) { // Write me. } iOS does not support EventSender.keydown() :/
Darin Adler
Comment 6 2016-03-09 09:57:35 PST
But you don’t move focus to the next element by pressing a "tab key" on iOS either. I’m not sure that WebKit on iOS has code that understands the tab character. We might have to write something different to test tabIndex on that platform. Not sure there is a platform independent way of walking through the tab loop.
Note You need to log in before you can comment on or make changes to this bug.